Adicionando dependencia paperclip para upload de imagem

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,14 +12,13 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: 5
   username: root
-  password:
-  host: localhost
+  password: root
 
 development:
   <<: *default
   database: photogallery_development
+  socket: /Applications/MAMP/tmp/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
