--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# MySQL.  Versions 5.0+ are recommended.
+# MySQL.  Versions 4.1 and 5.0 are recommended.
 #
 # Install the MYSQL driver
 #   gem install mysql2
@@ -8,46 +8,29 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-#
-default: &default
+development:
   adapter: mysql2
   encoding: utf8
+  database: photogallery_development
   username: root
   password: root
-
-development:
-  <<: *default
-  database: photogallery_development
   socket: /Applications/MAMP/tmp/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
   database: photogallery_test
+  username: root
+  password: root
+  socket: /Applications/MAMP/tmp/mysql/mysql.sock
 
-# As with config/secrets.yml, you never want to store sensitive information,
-# like your database password, in your source code. If your source code is
-# ever seen by anyone, they now have access to your database.
-#
-# Instead, provide the password as a unix environment variable when you boot
-# the app. Read http://guides.rubyonrails.org/configuring.html#configuring-a-database
-# for a full rundown on how to provide these environment variables in a
-# production deployment.
-#
-# On Heroku and other platform providers, you may have a full connection URL
-# available as an environment variable. For example:
-#
-#   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
-#
-# You can use this database configuration with:
-#
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
 production:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
   database: photogallery_production
-  username: photogallery
-  password: <%= ENV['PHOTOGALLERY_DATABASE_PASSWORD'] %>
+  pool: 5
+  username: root
+  password: deploy@server
